// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom default render renders correctly 1`] = `
<div class="ais-HierarchicalMenu">
  <div class>
    <ol>
      <li>
        <a>
          Apple - 80
        </a>
        <ol>
          <li>
            <a>
              iPhone - 20
            </a>
          </li>
          <li>
            <a>
              iPad - 20
            </a>
          </li>
          <li>
            <a>
              MacBook - 40
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Samsung - 40
        </a>
        <ol>
          <li>
            <a>
              Galaxy - 30
            </a>
          </li>
          <li>
            <a>
              Note - 10
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Microsoft - 20
        </a>
      </li>
      <li>
        <a>
          Google - 2
        </a>
        <ol>
        </ol>
      </li>
    </ol>
    <button>
      View more
    </button>
  </div>
</div>
`;

exports[`custom default render renders correctly with a disabled show more button 1`] = `
<div class="ais-HierarchicalMenu">
  <div class>
    <ol>
      <li>
        <a>
          Apple - 80
        </a>
        <ol>
          <li>
            <a>
              iPhone - 20
            </a>
          </li>
          <li>
            <a>
              iPad - 20
            </a>
          </li>
          <li>
            <a>
              MacBook - 40
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Samsung - 40
        </a>
        <ol>
          <li>
            <a>
              Galaxy - 30
            </a>
          </li>
          <li>
            <a>
              Note - 10
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Microsoft - 20
        </a>
      </li>
      <li>
        <a>
          Google - 2
        </a>
        <ol>
        </ol>
      </li>
    </ol>
    <button disabled="disabled">
      View more
    </button>
  </div>
</div>
`;

exports[`custom default render renders correctly with a limit 1`] = `
<div class="ais-HierarchicalMenu">
  <div class>
    <ol>
      <li>
        <a>
          Apple - 80
        </a>
        <ol>
          <li>
            <a>
              iPhone - 20
            </a>
          </li>
          <li>
            <a>
              iPad - 20
            </a>
          </li>
          <li>
            <a>
              MacBook - 40
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Samsung - 40
        </a>
        <ol>
          <li>
            <a>
              Galaxy - 30
            </a>
          </li>
          <li>
            <a>
              Note - 10
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Microsoft - 20
        </a>
      </li>
      <li>
        <a>
          Google - 2
        </a>
        <ol>
        </ol>
      </li>
    </ol>
    <button>
      View more
    </button>
  </div>
</div>
`;

exports[`custom default render renders correctly with a show more button toggled 1`] = `
<div class="ais-HierarchicalMenu">
  <div class>
    <ol>
      <li>
        <a>
          Apple - 80
        </a>
        <ol>
          <li>
            <a>
              iPhone - 20
            </a>
          </li>
          <li>
            <a>
              iPad - 20
            </a>
          </li>
          <li>
            <a>
              MacBook - 40
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Samsung - 40
        </a>
        <ol>
          <li>
            <a>
              Galaxy - 30
            </a>
          </li>
          <li>
            <a>
              Note - 10
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Microsoft - 20
        </a>
      </li>
      <li>
        <a>
          Google - 2
        </a>
        <ol>
        </ol>
      </li>
    </ol>
    <button>
      View more
    </button>
  </div>
</div>
`;

exports[`custom default render renders correctly with a show more button toggled 2`] = `
<div class="ais-HierarchicalMenu">
  <div class>
    <ol>
      <li>
        <a>
          Apple - 80
        </a>
        <ol>
          <li>
            <a>
              iPhone - 20
            </a>
          </li>
          <li>
            <a>
              iPad - 20
            </a>
          </li>
          <li>
            <a>
              MacBook - 40
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Samsung - 40
        </a>
        <ol>
          <li>
            <a>
              Galaxy - 30
            </a>
          </li>
          <li>
            <a>
              Note - 10
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a>
          Microsoft - 20
        </a>
      </li>
      <li>
        <a>
          Google - 2
        </a>
        <ol>
        </ol>
      </li>
    </ol>
    <button>
      View less
    </button>
  </div>
</div>
`;

exports[`custom default render renders correctly with an URL for the href 1`] = `
<div class="ais-HierarchicalMenu">
  <div class>
    <ol>
      <li>
        <a href="/categories/Apple">
          Apple - 80
        </a>
        <ol>
          <li>
            <a href="/categories/Apple/iPhone">
              iPhone - 20
            </a>
          </li>
          <li>
            <a href="/categories/Apple/iPad">
              iPad - 20
            </a>
          </li>
          <li>
            <a href="/categories/Apple/MacBook">
              MacBook - 40
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a href="/categories/Samsung">
          Samsung - 40
        </a>
        <ol>
          <li>
            <a href="/categories/Samsung/Galaxy">
              Galaxy - 30
            </a>
          </li>
          <li>
            <a href="/categories/Samsung/Note">
              Note - 10
            </a>
          </li>
        </ol>
      </li>
      <li>
        <a href="/categories/Microsoft">
          Microsoft - 20
        </a>
      </li>
      <li>
        <a href="/categories/Google">
          Google - 2
        </a>
        <ol>
        </ol>
      </li>
    </ol>
    <button>
      View more
    </button>
  </div>
</div>
`;

exports[`custom default render renders correctly without refinement 1`] = `
<div class="ais-HierarchicalMenu ais-HierarchicalMenu--noRefinement">
  <div class="no-refinement">
    <ol>
    </ol>
    <button>
      View more
    </button>
  </div>
</div>
`;

exports[`custom showMoreLabel render renders correctly with a custom show more label 1`] = `
<div class="ais-HierarchicalMenu">
  <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0">
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Apple
        </span>
        <span class="ais-HierarchicalMenu-count">
          80
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPhone
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPad
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              MacBook
            </span>
            <span class="ais-HierarchicalMenu-count">
              40
            </span>
          </a>
          <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl2">
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 13"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  20
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 15"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 12
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Samsung
        </span>
        <span class="ais-HierarchicalMenu-count">
          40
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Galaxy
            </span>
            <span class="ais-HierarchicalMenu-count">
              30
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Note
            </span>
            <span class="ais-HierarchicalMenu-count">
              10
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Microsoft
        </span>
        <span class="ais-HierarchicalMenu-count">
          20
        </span>
      </a>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected">
      <a class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected">
        <span class="ais-HierarchicalMenu-label">
          Google
        </span>
        <span class="ais-HierarchicalMenu-count">
          2
        </span>
      </a>
    </li>
  </ul>
  <button class="ais-HierarchicalMenu-showMore">
    <span>
      Voir plus
    </span>
  </button>
</div>
`;

exports[`custom showMoreLabel render renders correctly with a custom show more label toggled 1`] = `
<div class="ais-HierarchicalMenu">
  <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0">
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Apple
        </span>
        <span class="ais-HierarchicalMenu-count">
          80
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPhone
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPad
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              MacBook
            </span>
            <span class="ais-HierarchicalMenu-count">
              40
            </span>
          </a>
          <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl2">
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 13"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  20
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 15"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 12
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Samsung
        </span>
        <span class="ais-HierarchicalMenu-count">
          40
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Galaxy
            </span>
            <span class="ais-HierarchicalMenu-count">
              30
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Note
            </span>
            <span class="ais-HierarchicalMenu-count">
              10
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Microsoft
        </span>
        <span class="ais-HierarchicalMenu-count">
          20
        </span>
      </a>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected">
      <a class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected">
        <span class="ais-HierarchicalMenu-label">
          Google
        </span>
        <span class="ais-HierarchicalMenu-count">
          2
        </span>
      </a>
    </li>
  </ul>
  <button class="ais-HierarchicalMenu-showMore">
    <span>
      Voir moins
    </span>
  </button>
</div>
`;

exports[`default render renders correctly 1`] = `
<div class="ais-HierarchicalMenu">
  <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0">
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Apple
        </span>
        <span class="ais-HierarchicalMenu-count">
          80
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPhone
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPad
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              MacBook
            </span>
            <span class="ais-HierarchicalMenu-count">
              40
            </span>
          </a>
          <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl2">
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 13"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  20
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 15"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 12
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Samsung
        </span>
        <span class="ais-HierarchicalMenu-count">
          40
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Galaxy
            </span>
            <span class="ais-HierarchicalMenu-count">
              30
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Note
            </span>
            <span class="ais-HierarchicalMenu-count">
              10
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Microsoft
        </span>
        <span class="ais-HierarchicalMenu-count">
          20
        </span>
      </a>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected">
      <a class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected">
        <span class="ais-HierarchicalMenu-label">
          Google
        </span>
        <span class="ais-HierarchicalMenu-count">
          2
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`default render renders correctly a sub categories selected 1`] = `
<div class="ais-HierarchicalMenu">
  <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0">
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent ais-HierarchicalMenu-item--selected">
      <a class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected">
        <span class="ais-HierarchicalMenu-label">
          Apple
        </span>
        <span class="ais-HierarchicalMenu-count">
          80
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPhone
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPad
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent ais-HierarchicalMenu-item--selected">
          <a class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected">
            <span class="ais-HierarchicalMenu-label">
              MacBook
            </span>
            <span class="ais-HierarchicalMenu-count">
              40
            </span>
          </a>
          <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl2">
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 13"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  20
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 15"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 12
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Samsung
        </span>
        <span class="ais-HierarchicalMenu-count">
          40
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Galaxy
            </span>
            <span class="ais-HierarchicalMenu-count">
              30
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Note
            </span>
            <span class="ais-HierarchicalMenu-count">
              10
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Microsoft
        </span>
        <span class="ais-HierarchicalMenu-count">
          20
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`default render renders correctly with a URL for the href 1`] = `
<div class="ais-HierarchicalMenu">
  <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0">
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link"
         href="/categories/Apple"
      >
        <span class="ais-HierarchicalMenu-label">
          Apple
        </span>
        <span class="ais-HierarchicalMenu-count">
          80
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link"
             href="/categories/Apple > iPhone"
          >
            <span class="ais-HierarchicalMenu-label">
              iPhone
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link"
             href="/categories/Apple > iPad"
          >
            <span class="ais-HierarchicalMenu-label">
              iPad
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
          <a class="ais-HierarchicalMenu-link"
             href="/categories/Apple > MacBook"
          >
            <span class="ais-HierarchicalMenu-label">
              MacBook
            </span>
            <span class="ais-HierarchicalMenu-count">
              40
            </span>
          </a>
          <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl2">
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link"
                 href="/categories/Apple > MacBook > MacBook 13&quot;"
              >
                <span class="ais-HierarchicalMenu-label">
                  MacBook 13"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  20
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link"
                 href="/categories/Apple > MacBook > MacBook 15&quot;"
              >
                <span class="ais-HierarchicalMenu-label">
                  MacBook 15"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link"
                 href="/categories/Apple > MacBook > MacBook"
              >
                <span class="ais-HierarchicalMenu-label">
                  MacBook 12
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link"
         href="/categories/Samsung"
      >
        <span class="ais-HierarchicalMenu-label">
          Samsung
        </span>
        <span class="ais-HierarchicalMenu-count">
          40
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link"
             href="/categories/Samsung > Galaxy"
          >
            <span class="ais-HierarchicalMenu-label">
              Galaxy
            </span>
            <span class="ais-HierarchicalMenu-count">
              30
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link"
             href="/categories/Samsung > Note"
          >
            <span class="ais-HierarchicalMenu-label">
              Note
            </span>
            <span class="ais-HierarchicalMenu-count">
              10
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item">
      <a class="ais-HierarchicalMenu-link"
         href="/categories/Microsoft"
      >
        <span class="ais-HierarchicalMenu-label">
          Microsoft
        </span>
        <span class="ais-HierarchicalMenu-count">
          20
        </span>
      </a>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected">
      <a class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected"
         href="/categories/Google"
      >
        <span class="ais-HierarchicalMenu-label">
          Google
        </span>
        <span class="ais-HierarchicalMenu-count">
          2
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`default render renders correctly with show more disabled 1`] = `
<div class="ais-HierarchicalMenu">
  <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0">
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Apple
        </span>
        <span class="ais-HierarchicalMenu-count">
          80
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPhone
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              iPad
            </span>
            <span class="ais-HierarchicalMenu-count">
              20
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              MacBook
            </span>
            <span class="ais-HierarchicalMenu-count">
              40
            </span>
          </a>
          <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl2">
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 13"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  20
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 15"
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
            <li class="ais-HierarchicalMenu-item">
              <a class="ais-HierarchicalMenu-link">
                <span class="ais-HierarchicalMenu-label">
                  MacBook 12
                </span>
                <span class="ais-HierarchicalMenu-count">
                  10
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Samsung
        </span>
        <span class="ais-HierarchicalMenu-count">
          40
        </span>
      </a>
      <ul class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1">
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Galaxy
            </span>
            <span class="ais-HierarchicalMenu-count">
              30
            </span>
          </a>
        </li>
        <li class="ais-HierarchicalMenu-item">
          <a class="ais-HierarchicalMenu-link">
            <span class="ais-HierarchicalMenu-label">
              Note
            </span>
            <span class="ais-HierarchicalMenu-count">
              10
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li class="ais-HierarchicalMenu-item">
      <a class="ais-HierarchicalMenu-link">
        <span class="ais-HierarchicalMenu-label">
          Microsoft
        </span>
        <span class="ais-HierarchicalMenu-count">
          20
        </span>
      </a>
    </li>
    <li class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected">
      <a class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected">
        <span class="ais-HierarchicalMenu-label">
          Google
        </span>
        <span class="ais-HierarchicalMenu-count">
          2
        </span>
      </a>
    </li>
  </ul>
  <button class="ais-HierarchicalMenu-showMore ais-HierarchicalMenu-showMore--disabled"
          disabled="disabled"
  >
    Show more
  </button>
</div>
`;

exports[`default render renders correctly with show more label 1`] = `
<button class="ais-HierarchicalMenu-showMore">
  Show more
</button>
`;

exports[`default render renders correctly with show more label toggled 1`] = `
<button class="ais-HierarchicalMenu-showMore">
  Show less
</button>
`;

exports[`default render renders correctly without refinement 1`] = `
<div class="ais-HierarchicalMenu ais-HierarchicalMenu--noRefinement">
</div>
`;
